Change HTML color message to white. Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -33,4 +33,5 @@ input[type="submit"] {
 
 .registration-checkbox {
 	-webkit-appearance: checkbox !important;
+	vertical-align: middle;
 }
